HW10/E-4.2.6-InsertionSortTrace/wdir_msg/compile.err

InsertionSortTrace.java:12: error: cannot find symbol
            for (int j = i; j > 0; j--){
                         ^
  symbol:   variable i
  location: class InsertionSortTrace
1 error


